Implement checkout detail calculation

--- a/src/app/cart/cart-detail/cart-checkout/cart-checkout.component.html
+++ b/src/app/cart/cart-detail/cart-checkout/cart-checkout.component.html
@@ -16,7 +16,9 @@
 
 
   <div class="flex justify-center">
-    <button class="bg-orange-500 rounded-2xl text-white w-full p-4 text-2xl">checkout</button>
+    <button class="bg-orange-500 rounded-2xl text-white w-full p-4 text-2xl">
+      <a [routerLink]="['/checkout']">checkout</a>
+    </button>
   </div>
 
 </div>
