--- a/src/app/checkout/order/order-card/order-card.component.html
+++ b/src/app/checkout/order/order-card/order-card.component.html
@@ -1,22 +1,23 @@
 <div class=" border-b border-b-gray-300 md:px-4 md:py-6 px-0 py-2">
   <div class="flex justify-between">
     <!--  left-->
-    <div class="flex">
-      <!--    image-->
-      <div class="flex items-center justify-center">
-        <img class="h-16 md:h-24" alt="" src="assets/images/teshirty.png">
-      </div>
-      <!--    detail-->
-      <div>
-        <p class="font-bold text-lg">name</p>
-        <p class="text-gray-500">size</p>
-        <p class="text-gray-500">3 psc</p>
+    <div class="flex flex-col">
 
+      <p class="font-bold text-lg mb-3">{{cardItem.product.name}}</p>
+
+      <div class="flex justify-start">
+        <div class="h-24 w-24  mr-3 ">
+          <img alt=""
+               class="object-cover w-full h-full  rounded-lg "
+               [src]="cardItem.product.imgURl">
+        </div>
+        <div>
+          <p class="text-gray-500">size : {{cardItem.selectedSize}}</p>
+          <p class="text-gray-500">quantity : {{cardItem.quantity}}</p>
+          <p class="text-gray-500">price : {{cardItem.product.price| number: '1.2-2' }} </p>
+        </div>
       </div>
-    </div>
-    <!--  right-->
-    <div>
-      <p class="font-bold text-lg">$ 12.00</p>
+
     </div>
   </div>
 </div>
