--- a/src/app/product-card/product-card.component.html
+++ b/src/app/product-card/product-card.component.html
@@ -47,14 +47,26 @@
         <button (click)="show(product)" class="bg-orange-500 text-white rounded-md py-2 px-4">Add To Cart</button>
 
       </div>
-      <button (click)="addToFavorate(product)">
+      <button *ngIf="!isFavorate"
+              (click)="addToFavorate(product)">
         <div class="h-8 w-8 rounded-full bg-orange-500 flex justify-center items-center text-white">
           <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
-               stroke="currentColor"
-               class="w-6 h-6">
+               stroke="currentColor" class="w-6 h-6">
             <path stroke-linecap="round" stroke-linejoin="round"
-                  d="M21 8.25c0-2.485-2.099-4.5-4.688-4.5-1.935 0-3.597 1.126-4.312 2.733-.715-1.607-2.377-2.733-4.313-2.733C5.1 3.75 3 5.765 3 8.25c0 7.22 9 12 9 12s9-4.78 9-12z"/>
+                  d="M17.593 3.322c1.1.128 1.907 1.077 1.907 2.185V21L12 17.25 4.5 21V5.507c0-1.108.806-2.057 1.907-2.185a48.507 48.507 0 0111.186 0z"/>
           </svg>
+
+        </div>
+      </button>
+      <button *ngIf="isFavorate"
+              (click)="removeFromFavorate(product)">
+        <div class="h-8 w-8 rounded-full bg-orange-500 flex justify-center items-center text-white">
+          <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
+               stroke="currentColor" class="w-6 h-6">
+            <path stroke-linecap="round" stroke-linejoin="round"
+                  d="M3 3l1.664 1.664M21 21l-1.5-1.5m-5.485-1.242L12 17.25 4.5 21V8.742m.164-4.078a2.15 2.15 0 011.743-1.342 48.507 48.507 0 0111.186 0c1.1.128 1.907 1.077 1.907 2.185V19.5M4.664 4.664L19.5 19.5"/>
+          </svg>
+
         </div>
       </button>
     </div>
